[package]
name = "t2plugin"
version = "0.8.13"
authors = ["Tranalyzer2 dev. team"]

[dependencies]
libc = "0.2.117"

[features]
ETH_ACTIVATE = []
IPV6_ACTIVATE = []
IPV6_DUALMODE = []
SCTP_ACTIVATE = []
SCTP_STATFINDEX = []
MULTIPKTSUP = []
T2_PRI_HDRDESC = []
SUBNET_INIT = []
FLOW_LIFETIME = []
FLOW_AGGREGATION = []
LAPD_ACTIVATE = []
